--- a/_locales/fr/messages.json
+++ b/_locales/fr/messages.json
@@ -1,186 +1,186 @@
 {
     "extName": {
-      "message": "Screenity - Graba y anota tu pantalla",
+      "message": "Screenity - Enregistreur d'écran et outil d'annotation",
       "description": "Extension name"
     },
     "extDesc": {
-      "message": "La mejor grabadora para Chrome. Graba tu pantalla, anota, edita, y mucho más.",
+      "message": "L'enregistreur d'écran le plus puissant pour Chrome. Capture, annote, édite et plus encore",
       "description": "Extension description"
     },
     "extCancel": {
-      "message": "Cancelar la grabación",
+      "message": "Annuler l'enregistrement",
       "description": "Cancel recording keyboard shortcut name"
     },
     "extMute": {
-      "message": "Activar/Desactivar el micrófono",
+      "message": "Couper / activer le micro",
       "description": "Mute/Unmute microphone keyboard shortcut name"
     },
     "extStop": {
-      "message": "Detener la grabación",
+      "message": "Arrêter l'enregistrement",
       "description": "Stop recording keyboard shortcut name"
     },
     "extPause": {
-      "message": "Pausar/Reanudar la grabación",
+      "message": "Mettre en pause/reprendre l'enregistrement",
       "description": "Pause/Resume keyboard shortcut name"
     },
     "tab_only": {
-      "message": "Pestaña",
+      "message": "Onglet",
       "description": "Tab only label in popup"
     },
     "desktop": {
-      "message": "Escritorio",
+      "message": "Écran",
       "description": "Desktop label in popup"
     },
     "camera_only": {
-      "message": "Sólo cámara",
+      "message": "Caméra",
       "description": "Camera only label in popup"
     },
     "camera": {
-      "message": "Cámara",
+      "message": "Caméra",
       "description": "Camera dropdown label in popup"
     },
     "microphone": {
-      "message": "Micrófono",
+      "message": "Micro",
       "description": "Microphone dropdown label in popup"
     },
     "flip_camera": {
-      "message": "Girar la cámara",
+      "message": "Retourner la caméra",
       "description": "Flip camera label in popup"
     },
     "push_to_talk": {
-      "message": "Pulsar para hablar",
+      "message": "Pousser pour parler",
       "description": "Push to talk label in popup"
     },
     "only_on_hover": {
-      "message": "Ocultar controles mientras grabas",
+      "message": "Barre d’outils uniquement au survol",
       "description": "Only show toolbar on hover label in popup"
     },
     "disabled": {
-      "message": "Desactivado",
+      "message": "Désactivé",
       "description": "Disabled dropdown state in popup"
     },
     "loading": {
-      "message": "Cargando...",
+      "message": "Chargement...",
       "description": "Loading state in popup"
     },
     "start_recording": {
-      "message": "Iniciar la grabación",
+      "message": "Commencer l’enregistrement",
       "description": "Start recording state in popup"
     },
     "starting_recording": {
-      "message": "Iniciando...",
+      "message": "Début de l’enregistrement…",
       "description": "Starting recording state in popup"
     },
     "cannot_record": {
-      "message": "No puedes grabar en esta página",
+      "message": "Impossible d'enregistrer sur cette page",
       "description": "Can't record in this page state in popup"
     },
     "stop_recording": {
-      "message": "Detener la grabación",
+      "message": "Arrêter l’enregistrement",
       "description": "Stop recording state in popup"
     },
     "second": {
-      "message": "segundos",
+      "message": "secondes",
       "description": "Seconds label for countdown"
     },
     "seconds": {
-      "message": "segundos",
+      "message": "secondes",
       "description": "Seconds label for countdown (plural)"
     },
     "countdown": {
-      "message": "para la cuenta atrás",
-      "description": "Countdown label in popup (X second countdown)"
+      "message": "pour le compte à rebours",
+      "description": "Countdown label in popup"
     },
     "keyboard_shortcuts": {
-      "message": "Accesos rápidos",
+      "message": "Raccourcis clavier",
       "description": "Keyboard shortcuts label in popup"
     },
     "smaller_file_size": {
-      "message": "Archivo más pequeño",
+      "message": "Taille de fichier plus petite",
       "description": "Smaller file size label in popup"
     },
     "highest_quality": {
-      "message": "Máxima calidad",
+      "message": "La plus haute qualité",
       "description": "Highest quality label in popup"
     },
     "rate_extension": {
-      "message": "Valorar Screenity",
+      "message": "Noter l’extension",
       "description": "Rate extension label in popup"
     },
     "made_by_alyssa": {
-      "message": "Hecho por Alyssa X",
+      "message": "Créé par Alyssa X",
       "description": "Made by Alyssa X label in popup"
     },
     "disabled_allow_access": {
-      "message": "Desactivado (Debes darle permisos en la barra de URL)",
+      "message": "Désactivé (autoriser l'accès dans la barre d'URL)",
       "description": "Disabled requiring permission for camera/mic in popup"
     },
     "made_with": {
-      "message": "Hecho con",
-      "description": "Made with love label in video editor"
+      "message": "Fait avec",
+      "description": "Made with label in video editor"
     },
     "by_alyssa": {
-      "message": "por Alyssa X",
+      "message": "par Alyssa X",
       "description": "By Alyssa X label in video editor"
     },
     "edit_recording": {
-      "message": "Edita tu grabación",
+      "message": "Éditer l’enregistrement",
       "description": "Edit your recording label in video editor"
     },
     "edit_recording_desc": {
-      "message": "Dale los toques finales a tu vídeo.",
+      "message": "Ajouter les touches finales à ta vidéo.",
       "description": "Edit recording description in video editor"
     },
     "format": {
-      "message": "Formato de video",
+      "message": "Format d’exportation",
       "description": "Export format label in video editor"
     },
     "webm": {
-      "message": "WEBM (por defecto)",
+      "message": "WEBM (défaut)",
       "description": "Webm dropdown label in video editor"
     },
     "trim_video": {
-      "message": "Recortar el video",
+      "message": "Couper la vidéo",
       "description": "Trim video label in video editor"
     },
     "start": {
-      "message": "Inicio",
+      "message": "Commencer",
       "description": "Start label in video editor"
     },
     "end": {
-      "message": "Final",
+      "message": "Terminer",
       "description": "End label in video editor"
     },
     "remove_part": {
-      "message": "Eliminar una parte del video",
+      "message": "Supprimer une partie de la vidéo",
       "description": "Remove part of the video label in video editor"
     },
     "apply": {
-      "message": "Aplicar",
+      "message": "Appliquer",
       "description": "Apply button in video editor"
     },
     "reset": {
-      "message": "Restablecer cambios (volver a la grabación inicial)",
+      "message": "Réinitialiser les modifications (revenir à l'enregistrement initial)",
       "description": "Reset label in video editor"
     },
     "download": {
-      "message": "Descargar",
+      "message": "Télécharger",
       "description": "Download button in video editor"
     },
     "save_drive": {
-      "message": "Guardar en Drive",
+      "message": "Google Drive",
       "description": "Save to Drive button in video editor"
     },
     "saving": {
-      "message": "Guardando...",
+      "message": "Chargement...",
       "description": "Saving to Drive button in video editor"
     },
     "show_hide": {
-      "message": "Mostrar/ocultar opciones",
+      "message": "Afficher/masquer les options",
       "description": "Show/hide options panel in video editor (small screen)"
     },
     "downloading": {
-      "message": "Descargando...",
+      "message": "Chargement...",
       "description": "Downloading button in video editor"
     }
 }
