--- a/_locales/de/messages.json
+++ b/_locales/de/messages.json
@@ -4,7 +4,7 @@
       "description": "Extension name"
     },
     "extDesc": {
-      "message": "Das mächtigste Bildschirmaufnahmewerkzeug für Chrome/Edge. Videos aufnehmen, beschriften, bearbeiten und mehr.",
+      "message": "Das mächtigste Bildschirmaufnahmewerkzeug für Chrome. Videos aufnehmen, beschriften, bearbeiten und mehr.",
       "description": "Extension description"
     },
     "extCancel": {
