--- a/_locales/hi/messages.json
+++ b/_locales/hi/messages.json
@@ -1,186 +1,186 @@
 {
     "extName": {
-      "message": "Screenity - Screen Recorder & Annotation Tool",
+      "message": "स्क्रीनिटी – स्क्रीन रिकॉर्डिंग और व्याख्या का उपकरण",
       "description": "Extension name"
     },
     "extDesc": {
-      "message": "The most powerful screen recorder for Chrome. Capture, annotate, edit, and more.",
+      "message": "क्रोम के लिए सबसे बेहतरीन स्क्रीन रिकॉर्डर। फोटो लें, व्याख्या करें, संपादित करें, और बहुत कुछ।",
       "description": "Extension description"
     },
     "extCancel": {
-      "message": "Cancel recording",
+      "message": "रिकॉर्डिंग रद्द करें",
       "description": "Cancel recording keyboard shortcut name"
     },
     "extMute": {
-      "message": "Mute/Unmute microphone",
+      "message": "माइक म्यूट/अनम्यूट करें",
       "description": "Mute/Unmute microphone keyboard shortcut name"
     },
     "extStop": {
-      "message": "Stop recording",
+      "message": "रिकॉर्डिंग बंद करें",
       "description": "Stop recording keyboard shortcut name"
     },
     "extPause": {
-      "message": "Pause/Resume recording",
+      "message": "रिकॉर्डिंग रोकें/फिर से शुरू करें",
       "description": "Pause/Resume keyboard shortcut name"
     },
     "tab_only": {
-      "message": "Tab only",
+      "message": "सिर्फ टैब",
       "description": "Tab only label in popup"
     },
     "desktop": {
-      "message": "Desktop",
+      "message": "डेस्कटॉप",
       "description": "Desktop label in popup"
     },
     "camera_only": {
-      "message": "Camera only",
+      "message": "सिर्फ कैमरा",
       "description": "Camera only label in popup"
     },
     "camera": {
-      "message": "Camera",
+      "message": "कैमरा",
       "description": "Camera dropdown label in popup"
     },
     "microphone": {
-      "message": "Microphone",
+      "message": "माइक्रोफोन",
       "description": "Microphone dropdown label in popup"
     },
     "flip_camera": {
-      "message": "Flip camera",
+      "message": "कैमरा बदलें",
       "description": "Flip camera label in popup"
     },
     "push_to_talk": {
-      "message": "Push to talk",
+      "message": "बात करने के लिए दबाएं",
       "description": "Push to talk label in popup"
     },
     "only_on_hover": {
-      "message": "Only show toolbar on hover",
+      "message": "होवर करने पर ही टूलबार दिखाएं",
       "description": "Only show toolbar on hover label in popup"
     },
     "disabled": {
-      "message": "Disabled",
+      "message": "अक्षम",
       "description": "Disabled dropdown state in popup"
     },
     "loading": {
-      "message": "Loading...",
+      "message": "लोडिंग...",
       "description": "Loading state in popup"
     },
     "start_recording": {
-      "message": "Start recording",
+      "message": "रिकॉर्डिंग शुरू करें",
       "description": "Start recording state in popup"
     },
     "starting_recording": {
-      "message": "Starting recording...",
+      "message": "रिकॉर्डिंग शुरू हो रही है...",
       "description": "Starting recording state in popup"
     },
     "cannot_record": {
-      "message": "Can't record in this page",
+      "message": "इस पेज पर रिकॉर्डिंग संभव नही है",
       "description": "Can't record in this page state in popup"
     },
     "stop_recording": {
-      "message": "Stop recording",
+      "message": "रिकॉर्डिंग बंद करें",
       "description": "Stop recording state in popup"
     },
     "second": {
-      "message": "second",
+      "message": "सेकंड",
       "description": "Seconds label for countdown"
     },
     "seconds": {
-      "message": "seconds",
+      "message": "सेकंड",
       "description": "Seconds label for countdown (plural)"
     },
     "countdown": {
-      "message": "countdown",
+      "message": "उल्टी गिनती",
       "description": "Countdown label in popup"
     },
     "keyboard_shortcuts": {
-      "message": "Keyboard shortcuts",
+      "message": "कीबोर्ड शॉर्टकट",
       "description": "Keyboard shortcuts label in popup"
     },
     "smaller_file_size": {
-      "message": "Smaller file size",
+      "message": "छोटा फाइल साइज",
       "description": "Smaller file size label in popup"
     },
     "highest_quality": {
-      "message": "Highest quality",
+      "message": "उत्तम क्वालिटी",
       "description": "Highest quality label in popup"
     },
     "rate_extension": {
-      "message": "Rate extension",
+      "message": "रेट एक्सटेंशन",
       "description": "Rate extension label in popup"
     },
     "made_by_alyssa": {
-      "message": "Made by Alyssa X",
+      "message": "Alyssa X द्वारा निर्मित",
       "description": "Made by Alyssa X label in popup"
     },
     "disabled_allow_access": {
-      "message": "Disabled (allow access in URL bar)",
+      "message": "अक्षम (URL बार में एक्सेस दें)",
       "description": "Disabled requiring permission for camera/mic in popup"
     },
     "made_with": {
-      "message": "Made with",
+      "message": "निर्माण:",
       "description": "Made with label in video editor"
     },
     "by_alyssa": {
-      "message": "by Alyssa X",
+      "message": "Alyssa X",
       "description": "By Alyssa X label in video editor"
     },
     "edit_recording": {
-      "message": "Edit your recording",
+      "message": "रिकॉर्डिंग एडिट करें",
       "description": "Edit your recording label in video editor"
     },
     "edit_recording_desc": {
-      "message": "Add the finishing touches to your video.",
+      "message": "अपनी वीडियो को अंतिम रूप दें।",
       "description": "Edit recording description in video editor"
     },
     "format": {
-      "message": "Export format",
+      "message": "निर्यात (एक्सपोर्ट) फॉर्मेट",
       "description": "Export format label in video editor"
     },
     "webm": {
-      "message": "WEBM (default)",
+      "message": "WEBM (डिफॉल्ट)",
       "description": "Webm dropdown label in video editor"
     },
     "trim_video": {
-      "message": "Trim video",
+      "message": "ट्रिम वीडियो",
       "description": "Trim video label in video editor"
     },
     "start": {
-      "message": "Start",
+      "message": "शुरू करें",
       "description": "Start label in video editor"
     },
     "end": {
-      "message": "End",
+      "message": "समाप्ति",
       "description": "End label in video editor"
     },
     "remove_part": {
-      "message": "Remove part of the video",
+      "message": "वीडियो का एक हिस्सा हटाएं",
       "description": "Remove part of the video label in video editor"
     },
     "apply": {
-      "message": "Apply",
+      "message": "लागू करें",
       "description": "Apply button in video editor"
     },
     "reset": {
-      "message": "Reset changes (revert to initial recording)",
+      "message": "परिवर्तन रीसेट करें (पहली रिकॉर्डिंग पे लौटें)",
       "description": "Reset label in video editor"
     },
     "download": {
-      "message": "Download",
+      "message": "डाउनलोड",
       "description": "Download button in video editor"
     },
     "save_drive": {
-      "message": "Save to Drive",
+      "message": "ड्राइव में सेव करें",
       "description": "Save to Drive button in video editor"
     },
     "saving": {
-      "message": "Saving...",
+      "message": "सेविंग...",
       "description": "Saving to Drive button in video editor"
     },
     "show_hide": {
-      "message": "Show/hide options",
+      "message": "विकल्प दिखाएं/छुपाएं",
       "description": "Show/hide options panel in video editor (small screen)"
     },
     "downloading": {
-      "message": "Downloading...",
+      "message": "डाउनलोडिंग...",
       "description": "Downloading button in video editor"
     }
 }
