update indonesian app description

--- a/_locales/id/messages.json
+++ b/_locales/id/messages.json
@@ -4,7 +4,7 @@
       "description": "Extension name"
     },
     "extDesc": {
-      "message": "Perekam layar paling kuat untuk Chrome. Jepret, beri anotasi, edit, dan lainnya. \n",
+      "message": "Perekam layar paling powerful untuk Chrome. Jepret, beri anotasi, edit, dan lainnya.",
       "description": "Extension description"
     },
     "extCancel": {
