--- a/_locales/fr/messages.json
+++ b/_locales/fr/messages.json
@@ -1,26 +1,26 @@
 {
     "extName": {
-      "message": "Screenity - Enregistreur d'écran et outil d'annotation",
+      "message": "Screenity - Enregistreur d’écran et outil d’annotation",
       "description": "Extension name"
     },
     "extDesc": {
-      "message": "L'enregistreur d'écran le plus puissant pour Chrome. Capture, annote, édite et plus encore",
+      "message": "L’enregistreur d’écran le plus puissant pour Chrome. Capturer, annoter, éditer et plus encore",
       "description": "Extension description"
     },
     "extCancel": {
-      "message": "Annuler l'enregistrement",
+      "message": "Annuler l’enregistrement",
       "description": "Cancel recording keyboard shortcut name"
     },
     "extMute": {
-      "message": "Couper / activer le micro",
+      "message": "Désactiver/Activer le microphone",
       "description": "Mute/Unmute microphone keyboard shortcut name"
     },
     "extStop": {
-      "message": "Arrêter l'enregistrement",
+      "message": "Arrêter l’enregistrement",
       "description": "Stop recording keyboard shortcut name"
     },
     "extPause": {
-      "message": "Mettre en pause/reprendre l'enregistrement",
+      "message": "Mettre en pause/reprendre l’enregistrement",
       "description": "Pause/Resume keyboard shortcut name"
     },
     "tab_only": {
@@ -32,7 +32,7 @@
       "description": "Desktop label in popup"
     },
     "camera_only": {
-      "message": "Caméra",
+      "message": "Caméra uniquement",
       "description": "Camera only label in popup"
     },
     "camera": {
@@ -40,15 +40,15 @@
       "description": "Camera dropdown label in popup"
     },
     "microphone": {
-      "message": "Micro",
+      "message": "Microphone",
       "description": "Microphone dropdown label in popup"
     },
     "flip_camera": {
-      "message": "Retourner la caméra",
+      "message": "Pivoter la caméra",
       "description": "Flip camera label in popup"
     },
     "push_to_talk": {
-      "message": "Pousser pour parler",
+      "message": "Appuyer pour parler",
       "description": "Push to talk label in popup"
     },
     "only_on_hover": {
@@ -60,11 +60,11 @@
       "description": "Disabled dropdown state in popup"
     },
     "loading": {
-      "message": "Chargement...",
+      "message": "Chargement…",
       "description": "Loading state in popup"
     },
     "start_recording": {
-      "message": "Commencer l’enregistrement",
+      "message": "Démarrer l’enregistrement",
       "description": "Start recording state in popup"
     },
     "starting_recording": {
@@ -72,7 +72,7 @@
       "description": "Starting recording state in popup"
     },
     "cannot_record": {
-      "message": "Impossible d'enregistrer sur cette page",
+      "message": "Impossible d’enregistrer sur cette page",
       "description": "Can't record in this page state in popup"
     },
     "stop_recording": {
@@ -80,7 +80,7 @@
       "description": "Stop recording state in popup"
     },
     "second": {
-      "message": "secondes",
+      "message": "seconde",
       "description": "Seconds label for countdown"
     },
     "seconds": {
@@ -88,7 +88,7 @@
       "description": "Seconds label for countdown (plural)"
     },
     "countdown": {
-      "message": "pour le compte à rebours",
+      "message": "compte à rebours",
       "description": "Countdown label in popup"
     },
     "keyboard_shortcuts": {
@@ -96,11 +96,11 @@
       "description": "Keyboard shortcuts label in popup"
     },
     "smaller_file_size": {
-      "message": "Taille de fichier plus petite",
+      "message": "Taille de fichier réduite",
       "description": "Smaller file size label in popup"
     },
     "highest_quality": {
-      "message": "La plus haute qualité",
+      "message": "Plus haute qualité",
       "description": "Highest quality label in popup"
     },
     "rate_extension": {
@@ -112,11 +112,11 @@
       "description": "Made by Alyssa X label in popup"
     },
     "disabled_allow_access": {
-      "message": "Désactivé (autoriser l'accès dans la barre d'URL)",
+      "message": "Désactivé (autoriser l’accès via la barre de l’URL)",
       "description": "Disabled requiring permission for camera/mic in popup"
     },
     "made_with": {
-      "message": "Fait avec",
+      "message": "Créé avec",
       "description": "Made with label in video editor"
     },
     "by_alyssa": {
@@ -128,11 +128,11 @@
       "description": "Edit your recording label in video editor"
     },
     "edit_recording_desc": {
-      "message": "Ajouter les touches finales à ta vidéo.",
+      "message": "Ajoutez la touche finale à votre vidéo.",
       "description": "Edit recording description in video editor"
     },
     "format": {
-      "message": "Format d’exportation",
+      "message": "Format d’export",
       "description": "Export format label in video editor"
     },
     "webm": {
@@ -140,7 +140,7 @@
       "description": "Webm dropdown label in video editor"
     },
     "trim_video": {
-      "message": "Couper la vidéo",
+      "message": "Rogner la vidéo",
       "description": "Trim video label in video editor"
     },
     "start": {
@@ -160,7 +160,7 @@
       "description": "Apply button in video editor"
     },
     "reset": {
-      "message": "Réinitialiser les modifications (revenir à l'enregistrement initial)",
+      "message": "Annuler les modifications (revenir à l’enregistrement initial)",
       "description": "Reset label in video editor"
     },
     "download": {
@@ -172,7 +172,7 @@
       "description": "Save to Drive button in video editor"
     },
     "saving": {
-      "message": "Chargement...",
+      "message": "Enregistrement…",
       "description": "Saving to Drive button in video editor"
     },
     "show_hide": {
@@ -180,7 +180,7 @@
       "description": "Show/hide options panel in video editor (small screen)"
     },
     "downloading": {
-      "message": "Chargement...",
+      "message": "Téléchargement…",
       "description": "Downloading button in video editor"
     }
 }
