--- a/_locales/ar/messages.json
+++ b/_locales/ar/messages.json
@@ -4,7 +4,7 @@
       "description": "Extension name"
     },
     "extDesc": {
-      "message": "أفضل مسجل شاشة لمتصفح جوجل كروم. التقط الشاشة،إرسم، حرر، والكثير",
+      "message": "أفضل مسجل شاشة لمتصفح جوجل كروم. إلتقت الشاشة،إرسم، حرر، والكثير",
       "description": "Extension description"
     },
     "extCancel": {
