--- a/src/_locales/tr/messages.json
+++ b/src/_locales/tr/messages.json
@@ -1392,5 +1392,13 @@
   "welcomeToProActionModal": {
     "message": "Tamamdır",
     "description": "Pro karşılama modali eylem düğmesi"
+  },
+  "webcodecsToggleLabel": {
+    "message": "Fast MP4 (beta)",
+    "description": "WebCodecs recorder toggle label"
+  },
+  "webcodecsFailedOffToast": {
+    "message": "Fast MP4 hata — kapalı",
+    "description": "WebCodecs failure auto-disable toast"
   }
 }
