--- a/src/_locales/ca/messages.json
+++ b/src/_locales/ca/messages.json
@@ -1392,5 +1392,13 @@
   "welcomeToProActionModal": {
     "message": "Entès",
     "description": "Botó d’acció del modal de benvinguda a Pro"
+  },
+  "webcodecsToggleLabel": {
+    "message": "Fast MP4 (beta)",
+    "description": "WebCodecs recorder toggle label"
+  },
+  "webcodecsFailedOffToast": {
+    "message": "Fast MP4 fallat — off",
+    "description": "WebCodecs failure auto-disable toast"
   }
 }
