--- a/src/_locales/de/messages.json
+++ b/src/_locales/de/messages.json
@@ -1392,5 +1392,13 @@
   "welcomeToProActionModal": {
     "message": "Verstanden",
     "description": "Bestätigungsbutton im Willkommensmodal für Pro"
+  },
+  "webcodecsToggleLabel": {
+    "message": "Fast MP4 (beta)",
+    "description": "WebCodecs recorder toggle label"
+  },
+  "webcodecsFailedOffToast": {
+    "message": "Fast MP4 Fehler — aus",
+    "description": "WebCodecs failure auto-disable toast"
   }
 }
