--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -1388,5 +1388,13 @@
   "welcomeToProActionModal": {
     "message": "Got it",
     "description": "Welcome to Pro modal action button"
+  },
+  "webcodecsToggleLabel": {
+    "message": "Fast MP4 (beta)",
+    "description": "WebCodecs recorder toggle label"
+  },
+  "webcodecsFailedOffToast": {
+    "message": "Fast MP4 failed — off",
+    "description": "WebCodecs failure auto-disable toast"
   }
 }
