--- a/src/_locales/es/messages.json
+++ b/src/_locales/es/messages.json
@@ -1392,5 +1392,13 @@
   "welcomeToProActionModal": {
     "message": "Entendido",
     "description": "Botón de acción del modal de bienvenida a Pro"
+  },
+  "webcodecsToggleLabel": {
+    "message": "Fast MP4 (beta)",
+    "description": "WebCodecs recorder toggle label"
+  },
+  "webcodecsFailedOffToast": {
+    "message": "Fast MP4 falló — off",
+    "description": "WebCodecs failure auto-disable toast"
   }
 }
