--- a/src/_locales/hi/messages.json
+++ b/src/_locales/hi/messages.json
@@ -1393,5 +1393,13 @@
   "welcomeToProActionModal": {
     "message": "ठीक है",
     "description": "Pro वेलकम मोडल का एक्शन बटन"
+  },
+  "webcodecsToggleLabel": {
+    "message": "Fast MP4 (beta)",
+    "description": "WebCodecs recorder toggle label"
+  },
+  "webcodecsFailedOffToast": {
+    "message": "Fast MP4 विफल — ऑफ",
+    "description": "WebCodecs failure auto-disable toast"
   }
 }
