--- a/src/_locales/id/messages.json
+++ b/src/_locales/id/messages.json
@@ -1393,5 +1393,13 @@
   "welcomeToProActionModal": {
     "message": "Mengerti",
     "description": "Tombol aksi di modal sambutan Pro"
+  },
+  "webcodecsToggleLabel": {
+    "message": "Fast MP4 (beta)",
+    "description": "WebCodecs recorder toggle label"
+  },
+  "webcodecsFailedOffToast": {
+    "message": "Fast MP4 gagal — mati",
+    "description": "WebCodecs failure auto-disable toast"
   }
 }
