--- a/src/_locales/ko/messages.json
+++ b/src/_locales/ko/messages.json
@@ -1393,5 +1393,13 @@
   "welcomeToProActionModal": {
     "message": "알겠어요",
     "description": "Pro 환영 모달 확인 버튼"
+  },
+  "webcodecsToggleLabel": {
+    "message": "Fast MP4 (beta)",
+    "description": "WebCodecs recorder toggle label"
+  },
+  "webcodecsFailedOffToast": {
+    "message": "Fast MP4 실패 — 꺼짐",
+    "description": "WebCodecs failure auto-disable toast"
   }
 }
