--- a/src/_locales/pl/messages.json
+++ b/src/_locales/pl/messages.json
@@ -1393,5 +1393,13 @@
   "welcomeToProActionModal": {
     "message": "Rozumiem",
     "description": "Przycisk akcji w oknie powitalnym Pro"
+  },
+  "webcodecsToggleLabel": {
+    "message": "Fast MP4 (beta)",
+    "description": "WebCodecs recorder toggle label"
+  },
+  "webcodecsFailedOffToast": {
+    "message": "Fast MP4 błąd — off",
+    "description": "WebCodecs failure auto-disable toast"
   }
 }
