--- a/src/_locales/pt_BR/messages.json
+++ b/src/_locales/pt_BR/messages.json
@@ -1390,5 +1390,13 @@
   "welcomeToProActionModal": {
     "message": "Entendi",
     "description": "Botão de ação do modal de boas-vindas ao Pro"
+  },
+  "webcodecsToggleLabel": {
+    "message": "Fast MP4 (beta)",
+    "description": "WebCodecs recorder toggle label"
+  },
+  "webcodecsFailedOffToast": {
+    "message": "Fast MP4 falhou — off",
+    "description": "WebCodecs failure auto-disable toast"
   }
 }
