--- a/src/_locales/pt_PT/messages.json
+++ b/src/_locales/pt_PT/messages.json
@@ -1392,5 +1392,13 @@
   "welcomeToProActionModal": {
     "message": "Percebi",
     "description": "Botão de ação do modal de boas-vindas ao Pro"
+  },
+  "webcodecsToggleLabel": {
+    "message": "Fast MP4 (beta)",
+    "description": "WebCodecs recorder toggle label"
+  },
+  "webcodecsFailedOffToast": {
+    "message": "Fast MP4 falhou — off",
+    "description": "WebCodecs failure auto-disable toast"
   }
 }
