--- a/src/_locales/ru/messages.json
+++ b/src/_locales/ru/messages.json
@@ -1392,5 +1392,13 @@
   "welcomeToProActionModal": {
     "message": "Понятно",
     "description": "Кнопка действия в приветственном окне Pro"
+  },
+  "webcodecsToggleLabel": {
+    "message": "Fast MP4 (beta)",
+    "description": "WebCodecs recorder toggle label"
+  },
+  "webcodecsFailedOffToast": {
+    "message": "Fast MP4 ошибка — выкл",
+    "description": "WebCodecs failure auto-disable toast"
   }
 }
