--- a/src/_locales/ta/messages.json
+++ b/src/_locales/ta/messages.json
@@ -1392,5 +1392,13 @@
   "welcomeToProActionModal": {
     "message": "சரி, புரிந்துவிட்டது",
     "description": "Pro வரவேற்பு தோன்றும் பதிலின் செயல்பாடு பொத்தான்"
+  },
+  "webcodecsToggleLabel": {
+    "message": "Fast MP4 (beta)",
+    "description": "WebCodecs recorder toggle label"
+  },
+  "webcodecsFailedOffToast": {
+    "message": "Fast MP4 தோல்வி — ஆஃப்",
+    "description": "WebCodecs failure auto-disable toast"
   }
 }
